[gd_scene load_steps=12 format=3 uid="uid://bwgtrk8je4es6"]

[ext_resource type="Script" path="res://minigames/ping pong/scenes/game2.gd" id="2_y63ti"]
[ext_resource type="Script" path="res://minigames/ping pong/scenes/Player.gd" id="3_3rhec"]
[ext_resource type="Script" path="res://minigames/ping pong/scenes/CPU.gd" id="4_y43fi"]
[ext_resource type="Script" path="res://minigames/ping pong/scenes/Ball.gd" id="5_nhcje"]
[ext_resource type="Texture2D" uid="uid://pucgh0qbmij" path="res://minigames/ping pong/assets/bg.png" id="6_fcx71"]
[ext_resource type="FontFile" uid="uid://cwd1tkm36irny" path="res://minigames/ping pong/assets/pixel_font.ttf" id="6_t7t61"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vks4v"]
size = Vector2(20, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_croqj"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_05tcc"]
size = Vector2(1152, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1hrul"]
size = Vector2(1152, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4i124"]
size = Vector2(64, 648)

[node name="game2" type="Sprite2D"]
texture_filter = 1
centered = false
script = ExtResource("2_y63ti")

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(50, 324)
script = ExtResource("3_3rhec")

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_vks4v")

[node name="CPU" type="StaticBody2D" parent="."]
position = Vector2(1082, 324)
script = ExtResource("4_y43fi")

[node name="ColorRect" type="ColorRect" parent="CPU"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CPU"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_vks4v")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(576, 324)
collision_mask = 3
script = ExtResource("5_nhcje")

[node name="ColorRect" type="ColorRect" parent="Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_croqj")

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, -32)
shape = SubResource("RectangleShape2D_05tcc")

[node name="Bottom" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, 676)
shape = SubResource("RectangleShape2D_1hrul")

[node name="ScoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreLeft"]
position = Vector2(-32, 324)
shape = SubResource("RectangleShape2D_4i124")

[node name="ScoreRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreRight"]
position = Vector2(1184, 324)
shape = SubResource("RectangleShape2D_4i124")

[node name="Hud" type="CanvasLayer" parent="."]

[node name="PlayerScore" type="Label" parent="Hud"]
offset_top = 3.0
offset_right = 576.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("6_t7t61")
theme_override_font_sizes/font_size = 50
text = "You 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUScore" type="Label" parent="Hud"]
offset_left = 581.0
offset_top = 2.0
offset_right = 1152.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("6_t7t61")
theme_override_font_sizes/font_size = 50
text = "Friend 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="background" type="Sprite2D" parent="."]
z_index = -2
scale = Vector2(1.4425, 1.075)
texture = ExtResource("6_fcx71")
centered = false

[connection signal="body_entered" from="ScoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="ScoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
